--- a/queensofgoodness/beekeeping.html
+++ b/queensofgoodness/beekeeping.html
@@ -130,7 +130,7 @@
           </div>
         </div>
       </div>
-      <div class="row row-cols-1 row-cols-md-2 g-3">
+      <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-3">
         <div class="col">
           <div class="card h-100">
             <div class="card-header text-center">Domestic Honey bees</div>
@@ -149,9 +149,6 @@
                   <li>Treating issues affecting their health using informed best practices</li>
                 </ul>
               </ul>
-            </div>
-            <div class="card-footer text-center">
-              <a class="learn-more" href="#">Learn More</a>
             </div>
           </div>
         </div>
@@ -181,6 +178,45 @@
             </div>
             <div class="card-footer text-center">
               <a class="learn-more" href="#">Learn More</a>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card h-100">
+            <div class="card-header text-center">Pathogens</div>
+            <img class="card-img-top" src="static/img/HoneyBeeDay24.jpeg" alt="Honey Bee Day 24">
+            <div class="card-body">
+              <h5 class="card-title text-center">Bacteria, Fungus and Viruses</h5>
+              <ul class="card-text">
+                <li><b>American Foulbrood (AFB):</b> A highly contagious bacterial disease
+                  that affects honeybee brood, causing a distinctive sulfurous odor and
+                  sunken, dark-colored brood cells
+                </li>
+                <li><b>European Foulbrood (EFB):</b> A bacterial disease affecting brood
+                  larvae, causing them to die from starvation or secondary infections
+                </li>
+                <li><b>Chalkbrood:</b> A fungal disease that affects honeybee brood,
+                  causing infected larvae to develop into a hard, chalky-white pupae
+                </li>
+                <li><b>Sacbrood Virus (SBV):</b> A virus that causes brood to die in a
+                  sac-like, deformed state. 
+                </li>
+                <li><b>Chronic Bee Paralysis Virus (CBPV):</b> A virus that affects adult
+                  bees, causing them to tremble, shake, and eventually become paralyzed
+                </li>
+                <li><b>Deformed Wing Virus (DWV):</b> A virus transmitted by Varroa mites,
+                  causing deformed wings, legs, and abdomens in developing bees
+                </li>
+                <li><b>Nosema:</b> A microsporidian parasite that infects the intestines
+                  of adult honey bees, causing them to weaken and die
+                </li>
+                <li><b>Small Hive Beetle (Aethina tumida):</b> An invasive beetle that
+                  damages hive combs, feeds on honey and brood, and can transmit diseases
+                </li>
+                <li><b>Greater Wax Moth (Galleria mellonella):</b> A pest that can damage
+                  hive combs, particularly in weakened colonies
+                </li>
+              </ul>
             </div>
           </div>
         </div>
@@ -248,7 +284,8 @@
               <ul class="card-text">
                 <li><b>Formic Acid (MAQS/FormicPro)</b> works as a fumigant, kills mites in capped brood, safe with supers, (50&deg; - 85&deg;F, 10&deg; - 29&deg;C)</li>
                 <li><b>Thymol (Apiguard)</b> works as a fumigant, kills mites in capped brood, remove supers (60&deg; - 100&deg;F 16&deg; - 38&deg;C)</li>
-                <li><b>Essential Oil (Api Life VAR)</b> works as a fumigant, kills mites in capped brood, remove supers (65&deg; - 85&deg;F, 18&deg; - 29&deg;C)</li>
+                <li><b>Hop Compounds (HopGuard 3)</b> works as a fumigant, kills mites in capped brood, safe with supers (50+&deg;F, 10+&deg;C), up to 95% efficacy</li>
+                <li><b>Essential Oil (Api Life VAR)</b> works as a fumigant, kills mites in capped brood, remove supers (65&deg; - 85&deg;F, 18&deg; - 29&deg;C), up to 95% efficacy</li>
                 <li><b>Oxalic Acid (OAV)</b> works as a fumigant, doesn't kill mites in capped brood, remove supers (50&deg; - 60&deg;F, 10&deg; - 16&deg;C)</li>
                 <li><b>Oxalic Acid (Varroxsan)</b> slow release strips, doesn't kill mites in capped brood, okay with supers (above 60&deg;F, 16&deg;C)</li>
                 <div class="card-footer text-center">
