Update email contact template text and display

--- a/queensofgoodness/email_intro.html
+++ b/queensofgoodness/email_intro.html
@@ -33,7 +33,7 @@
     }
 
     .content {
-      display: block;
+      display: table-cell;
       padding: 1em;
     }
 
@@ -64,6 +64,14 @@
       display: inline-block;
       margin: 0 48px;
     }
+    .product-img {
+      width: 200px;
+      height: 150px;
+      line-height: 150px;
+      text-align: center;
+      display: inline-block;
+      margin: 0 48px;
+    }
   </style>
 </head>
 <html lang="en">
@@ -79,14 +87,15 @@
               <![endif]-->
             <table role="presentation" border="0" cellspacing="0" cellpadding="0" style="border-collapse:collapse;max-width:600px;width:100%">
               <tr>
-                <td class="content">
+                <td class="content" colspan="2">
                   <p>Hi There</p>
                   <p>
                     I'm following up on my recent message about <b>Queens of Goodness</b>
-                    — we create premium creamed and raw honeys using locally sourced
-                    honey from WY, CO, and UT, blended with whole freeze-dried fruits
-                    and fair-trade spices. Our products are eye-catching, giftable, and
-                    have been a hit at specialty shops, wellness clinics, and farmers markets.
+                    — we create premium creamed raw honey products using locally sourced
+                    raw and unfiltered honey from trusted beekeepers, blended with whole
+                    freeze-dried fruits and fair-trade spices. Our products are eye-catching,
+                    giftable, and have been a hit at specialty shops, wellness clinics,
+                    and farmers markets.
                   </p>
                   <p>
                     I’d love to chat about how we can work together. We offer:
@@ -95,7 +104,7 @@
                     <li>Competitive wholesale pricing</li>
                     <li>Low minimum orders</li>
                     <li>Beautiful shelf-ready packaging</li>
-                    <li>Samples upon request</li>
+                    <li>Samples and demos</li>
                   </ul>
                   <p>
                     Do you have 10 minutes this week to connect? I would love to drop off a sample of golden milk made with our Turmeric Ginger blend.
@@ -103,12 +112,18 @@
                   <p>
                     Looking forward to helping you bring something sweet and unique to your customers!
                   </p>
+                </td>
+              </tr>
+              <tr>
+                <td class="content" vertical-align="top">
                   <p>
-                    Best,<br>
+                    Best regards,<br>
                     Susan Frost<br>
                     Founder, Queens of Goodness
                   </p>
-                  <a href="https://queensofgoodness.com" target="_blank" style="border: solid 2px #0867ec; border-radius: 4px; box-sizing: border-box; cursor: pointer; display: inline-block; font-size: 16px; font-weight: bold; margin: 0; padding: 12px 24px; text-decoration: none; text-transform: capitalize; background-color: #0867ec; border-color: #0867ec; color: #ffffff;">Learn About Us</a>
+                </td>
+                <td>
+                  <a href="https://queensofgoodness.com"><img src="https://queensofgoodness.com/static/img/Queens-Of-Goodness-Horizontal-Raw-Honey-yellow-BG.png" style="display: inline-block;" alt="Queens of Goodness Logo"></a>
                 </td>
               </tr>
             </table>
@@ -124,14 +139,14 @@
             <table role="presentation" cellspacing="0" cellpadding="10" border="0" align="center">
               <tr>
                 <td>
-                  <a href="https://queensofgoodness.com"><img src="https://queensofgoodness.com/static/img/Queens-Of-Goodness-Horizontal-Raw-Honey-yellow-BG.png" style="display: inline-block;" alt=""></a>
+                  <a href="https://queensofgoodness.com/products.html"><img class="product-img" src="https://queensofgoodness.com/static/img/Display.jpg" alt="Product Display"></a>
                 </td>
                 <td>
                   <p>
-                    <a href="https://www.facebook.com/profile.php?id=61556597102293"><img src="https://queensofgoodness.com/static/img/Facebook-48x48.png" class="social-icon"></a>
+                    <a href="https://www.facebook.com/profile.php?id=61556597102293"><img src="https://queensofgoodness.com/static/img/Facebook-48x48.png" class="social-icon" alt="Facebook"></a>
                   </p>
                   <p>
-                    <a href="https://instagram.com/QueensofGoodness"><img src="https://queensofgoodness.com/static/img/Instagram-48x48.png" class="social-icon"></a>
+                    <a href="https://instagram.com/QueensofGoodness"><img src="https://queensofgoodness.com/static/img/Instagram-48x48.png" class="social-icon" alt="Instagram"></a>
                   </p>
                 </td>
               </tr>
