Update intro text, add email and phone to signature

--- a/queensofgoodness/email_intro.html
+++ b/queensofgoodness/email_intro.html
@@ -91,14 +91,20 @@
                   <p>Hi There</p>
                   <p>
                     I'm following up on my recent message about <b>Queens of Goodness</b>
-                    — we create premium creamed raw honey products using locally sourced
-                    raw and unfiltered honey from trusted beekeepers, blended with whole
+                    — we craft premium creamed raw honey products using locally sourced
+                    raw unfiltered honey from trusted beekeepers, blended with whole
                     freeze-dried fruits and fair-trade spices. Our products are eye-catching,
                     giftable, and have been a hit at specialty shops, wellness clinics,
                     and farmers markets.
                   </p>
                   <p>
-                    I’d love to chat about how we can work together. We offer:
+                    Popular blends like Turmeric Ginger and Elderberry are especially loved for their
+                    flavor and wellness benefits. We are fully licensed by the Wyoming Department of
+                    Health and carry commercial insurance. To learn more about our products and company
+                    visit queensofgoodness.com.
+                  </p>
+                  <p>
+                    I’d love to connect and explore how we can work together. We offer:
                   </p>
                   <ul>
                     <li>Competitive wholesale pricing</li>
@@ -107,7 +113,8 @@
                     <li>Samples and demos</li>
                   </ul>
                   <p>
-                    Do you have 10 minutes this week to connect? I would love to drop off a sample of golden milk made with our Turmeric Ginger blend.
+                    Do you have 10 minutes this week to meet? I would love to drop off a sample of
+                    golden milk made with our Turmeric Ginger blend.
                   </p>
                   <p>
                     Looking forward to helping you bring something sweet and unique to your customers!
@@ -119,7 +126,9 @@
                   <p>
                     Best regards,<br>
                     Susan Frost<br>
-                    Founder, Queens of Goodness
+                    Founder | Queens of Goodness<br>
+                    susan@queensofgoodness.com
+                    307-206-6976
                   </p>
                 </td>
                 <td>
