Add noindex meta tag for crawlers

--- a/queensofgoodness/brochure.html
+++ b/queensofgoodness/brochure.html
@@ -28,9 +28,9 @@
     <meta property="twitter:image" content="static/img/logo.svg">
     <meta name="description" content="Premium creamed raw honey with fair-trade spices and whole freeze-dried fruits">
     <meta name="author" content="Susan Frost">
-    <meta name="robots" content="index, follow">
-    <meta name="googlebot" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1">
-    <meta name="bingbot" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1">
+    <meta name="robots" content="noindex, nofollow">
+    <meta name="googlebot" content="noindex, nofollow, max-snippet:-1, max-image-preview:large, max-video-preview:-1">
+    <meta name="bingbot" content="noindex, nofollow, max-snippet:-1, max-image-preview:large, max-video-preview:-1">
     <link rel=canonical href="https://queensofgoodness.com/index.html">
     <link rel="shortcut icon" type="image/svg+xml" href="static/img/icon.svg">
     <link rel="icon" href="static/img/favicon.ico" media="(prefers-color-scheme: light)" sizes="32x32">
