--- a/queensofgoodness/beekeeping.html
+++ b/queensofgoodness/beekeeping.html
@@ -28,9 +28,9 @@
     <meta property="twitter:image" content="static/img/logo.svg">
     <meta name="description" content="Queens of Goodness - Education & Events">
     <meta name="author" content="Susan Frost">
-    <meta name="robots" content="index, follow">
-    <meta name="googlebot" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1">
-    <meta name="bingbot" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1">
+    <meta name="robots" content="noindex, nofollow">
+    <meta name="googlebot" content="noindex, nofollow, max-snippet:-1, max-image-preview:large, max-video-preview:-1">
+    <meta name="bingbot" content="noindex, nofollow, max-snippet:-1, max-image-preview:large, max-video-preview:-1">
     <link rel=canonical href="https://queensofgoodness.com/beekeeping.html">
     <link rel="shortcut icon" type="image/svg+xml" href="static/img/icon.svg">
     <link rel="icon" href="static/img/favicon.ico" media="(prefers-color-scheme: light)" sizes="32x32">
@@ -39,7 +39,6 @@
 
     <!-- Bootstrap CSS, Font Awesome, Google Fonts -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
 
     <!-- Custom styles -->
@@ -199,7 +198,7 @@
                   causing infected larvae to develop into a hard, chalky-white pupae
                 </li>
                 <li><b>Sacbrood Virus (SBV):</b> A virus that causes brood to die in a
-                  sac-like, deformed state. 
+                  sac-like, deformed state.
                 </li>
                 <li><b>Chronic Bee Paralysis Virus (CBPV):</b> A virus that affects adult
                   bees, causing them to tremble, shake, and eventually become paralyzed
