Replace Eat Wyo with Wind River Outpost

--- a/queensofgoodness/shop.html
+++ b/queensofgoodness/shop.html
@@ -179,12 +179,9 @@
           <div class="card h-100">
             <div class="card-header text-center">Order On-line</div>
             <div class="card-body text-center">
-              <a href="https://eatwyoming.com" target="_blank" rel="noopener noreferrer">
-                <img src="static/img/EatWyoLogo-1.png" class="img-fluid" width=30%>
+              <a href="https://windriveroutpost.com/collections/home-decor/products/queens-of-goodness-honey" target="_blank" rel="noopener noreferrer">
+                <img src="static/img/wind-river-outpost.png" class="img-fluid">
               </a>
-            </div>
-            <div class="card-footer text-center">
-              Only available to ship in Wyoming
             </div>
           </div>
         </div>
