Add Wyoming, UPC, extend temp range and bb

--- a/queensofgoodness/brochure.html
+++ b/queensofgoodness/brochure.html
@@ -65,8 +65,8 @@
           <div class="card-header text-center">Premium Creamed Raw Honey</div>
           <div class="card-body">
             <p class="card-text">
-              Raw unfiltered honey is sourced directly from trusted local beekeepers
-              and enriched with fair-trade spices and nutrient-rich freeze-dried fruits.
+              Raw unfiltered Wyoming honey is sourced directly from trusted local beekeepers
+              and enriched with premium and fair-trade spices and nutrient-rich freeze-dried fruits.
               Each batch is hand-crafted using a
               proprietary week-long crystallization and blending process that yields
               a velvety-smooth, spreadable product with distinctive flavors and all
@@ -132,10 +132,10 @@
             <p class="card-text">
               <b>MSRP</b>: $14.99<br>
               <b>MOQ</b>: Case of 24 jars<br>
-              <b>WSP</b>: $235<br>
+              <b>WSP</b>: $230<br>
               <b>Delivery</b>: Contact us<br>
               <ul>
-                <li>Variety Case (6 Turmeric Ginger, 6 Elderberry, 4 Blueberry, 3 Lemon, 3 Ginger, 2 Spice)</li>
+                <li>Variety Case (6 Turmeric Ginger, 6 Elderberry, 4 Blueberry, 3 Lemon, 3 Ginger, 2 Seasonal Spice)</li>
                 <li>Single Blend Case</li>
                 <li>Contact us for custom cases</li>
               </ul>
@@ -163,15 +163,16 @@
       </div>
       <div class="panel">
         <div class="card bl-card">
-          <div class="card-header text-center">Physical Information</div>
+          <div class="card-header text-center">Product Information</div>
           <div class="card-body">
-            <p>Standard box has 24 jars</p>
+              <p>Eye-catching packaging with UPCs</p>
+              <p>Licensed and insured facility</p>
             <ul>
               <li>Net wt 5.5 oz (156g)</li>
               <li>Jar wt 9.5oz (270g)</li>
               <li>Box wt 15 lbs (6.8kg)</li>
-              <li>Jar dimensions: 2.75 x 2.375" (6.9 x 6cm) </li>
-              <li>Box dimensions: 3 x 15 x 10.25" (5.1 x 38.1 x 26cm)</li>
+              <li>Jar dimensions: 2.75 x 2.375"</li>
+              <li>Box dimensions: 3 x 15 x 10.25"</li>
             </ul>
           </div>
         </div>
@@ -179,7 +180,7 @@
         <div class="card tg-card">
           <div class="card-header text-center">Honey Information</div>
           <div class="card-body">
-            <p>From the hive to the jar the honey never reaches 104&deg;F (40&deg;C)</p>
+            <p>From the hive to the jar the honey is never heated</p>
             <p>The honey is never filtered, only coarsely strained to remove the larger pieces of wax</p>
           </div>
         </div>
@@ -187,10 +188,10 @@
         <div class="card bl-card">
           <div class="card-header text-center">Storage Information</div>
           <div class="card-body">
-            <p>Store at room temperature 68-78&deg;F (20-25&deg;C) for the best consistency</p>
-            <p>Prolonged exposure to temperatures over 95&deg;F (35&deg;C) may result in
-              some decrystallization, but the product is still good</p>
-            <p>Shelf life is 3 years from production date</p>
+            <p>Store at room temperature, 65-80&deg;F for best consistency</p>
+            <p>Prolonged exposure to temperatures over 95&deg;F may result in
+              the product becoming more liquid but it remains safe and delicious</p>
+            <p>Shelf life is up to 4 years from production date</p>
           </div>
         </div>
       </div>
@@ -219,6 +220,8 @@
             <p>Susan Frost</p>
             <p>susan@queensofgoodness.com</p>
             <p>queensofgoodness.com</p>
+            <p>2881 Sinks Canyon Rd<br>
+              Lander, WY 82520</p>
             <p>307-206-6976</p>
           </div>
         </div>
