Remove organic from blueberries

--- a/queensofgoodness/products.html
+++ b/queensofgoodness/products.html
@@ -214,7 +214,7 @@
                 <li>Add a berry boost to your hot drink or oatmeal</li>
                 <li>Enjoy a spoonful or as delicious icing on a treat</li>
               </ul>
-              <p><b>INGREDIENTS:</b> raw honey, organic blueberries, organic lemons</p>
+              <p><b>INGREDIENTS:</b> raw honey, blueberries, organic lemons</p>
             </div>
           </div>
         </div>
