Add Lincoln Street Bakery, Copocos, Cupboard

--- a/queensofgoodness/shop.html
+++ b/queensofgoodness/shop.html
@@ -146,9 +146,19 @@
                     228 Main St, Lander, WY
                   </td>
                 </tr>
+                <tr>
+                  <td>
+                    <a href="https://www.lincolnstreetbakery.com" target="_blank" rel="noopener noreferrer">
+                      <img src="static/img/LincolnstreetBakery-01.png" class="img-fluid">
+                    </a>
+                  </td>
+                  <td>
+                    223 Lincoln St, Lander, WY
+                  </td>
+                </tr>
                 <td>
-                  <a href="https://www.facebook.com/p/Fremont-Local-Market-100084811015487/" target="_blank" rel="noopener noreferrer">
-                    <img src="static/img/FremontLocal.png" class="img-fluid" width=75%>
+                  <a href="https://fremontlocalmarket.org" target="_blank" rel="noopener noreferrer">
+                    <img src="static/img/FremontLocalMarketLogo_updated.jpg" class="img-fluid" width=75%>
                   </a>
                 </td>
                 <td>
@@ -166,22 +176,51 @@
                     112 S 2nd St, Laramie, WY
                   </td>
                 </tr>
+                <tr>
+                  <td>
+                    <a href="https://thecupboard.net" target="_blank" rel="noopener noreferrer">
+                      <img src="static/img/new-cupboard-logo.png" class="img-fluid">
+                    </a>
+                  </td>
+                  <td>
+                    152 S College Ave. Fort Collins, CO
+                  </td>
+                </tr>
+              </table>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card h-100">
+            <div class="card-header text-center">Shop & On-line Orders</div>
+            <div class="card-body text-center">
+              <table class="logo-table">
+                <tr>
+                  <td>
+                    <a href="https://windriveroutpost.com/collections/home-decor/products/queens-of-goodness-honey" target="_blank" rel="noopener noreferrer">
+                      <img src="static/img/wind-river-outpost.png" class="img-fluid">
+                    </a>
+                  </td>
+                  <td>
+                    320 Main St, Lander, WY
+                  </td>
+                </tr>
+                <tr>
+                  <td>
+                    <a href="https://www.copocoshoney.com" target="_blank" rel="noopener noreferrer">
+                      <img src="static/img/Copocos.jpg" class="img-fluid" width=60%>
+                    </a>
+                  </td>
+                  <td>
+                    2020 N College Ave. Fort Collins, CO
+                  </td>
+                </tr>
               </table>
             </div>
             <div class="card-footer text-center">
               <a class="learn-more" href="mailto:susan@queensofgoodness.com?
                 subject=I'm interested in becoming a vendor?
                 body=Can you contact me with information on how to become a vendor">Become a Vendor</a>
-            </div>
-          </div>
-        </div>
-        <div class="col">
-          <div class="card h-100">
-            <div class="card-header text-center">Order On-line</div>
-            <div class="card-body text-center">
-              <a href="https://windriveroutpost.com/collections/home-decor/products/queens-of-goodness-honey" target="_blank" rel="noopener noreferrer">
-                <img src="static/img/wind-river-outpost.png" class="img-fluid">
-              </a>
             </div>
           </div>
         </div>
