Add Chalk & Cheese

--- a/queensofgoodness/shop.html
+++ b/queensofgoodness/shop.html
@@ -168,6 +168,16 @@
                 </tr>
                 <tr>
                   <td>
+                    <a href="https://www.chalkncheesewy.com/" target="_blank" rel="noopener noreferrer">
+                      <img src="static/img/g30.avif" class="img-fluid" width=50%>
+                    </a>
+                  </td>
+                  <td>
+                    209 S 2nd St, Laramie, WY
+                  </td>
+                </tr>
+                <tr>
+                  <td>
                     <a href="https://www.laramiecoop.com" target="_blank" rel="noopener noreferrer">
                       <img src="static/img/BigHollow.svg" class="img-fluid" width=80%>
                     </a>
