Update prices and case options

--- a/queensofgoodness/brochure.html
+++ b/queensofgoodness/brochure.html
@@ -117,7 +117,6 @@
               <li>Cinnamon Spice</li>
               <li>Lemon</li>
               <li>Ginger</li>
-              <li>Seasonal Spice</li>
             </ul>
           </div>
         </div>
@@ -130,14 +129,14 @@
           <div class="card-header text-center">Wholesale Order Information</div>
           <div class="card-body">
             <p class="card-text">
-              <b>MSRP</b>: $14.99<br>
-              <b>MOQ</b>: Case of 24 jars<br>
-              <b>WSP</b>: $230<br>
+              <b>MSRP</b> (Grocery): $13.99 - $14.99<br>
+              <b>MSRP</b> (Speciality): $14.99 - $16.99<br>
+              <b>Wholesale</b>: Case of 24 jars ($200)<br>
+              <b>Wholesale</b>: Partial case ($8.50 / jar)<br>
               <b>Delivery</b>: Contact us<br>
               <ul>
-                <li>Variety Case (6 Turmeric Ginger, 6 Elderberry, 4 Blueberry, 3 Lemon, 3 Ginger, 2 Seasonal Spice)</li>
-                <li>Single Blend Case</li>
-                <li>Contact us for custom cases</li>
+                <li>Top Sellers - Turmeric Ginger, Elderberry, Blueberry Lemon</li>
+                <li>Tailor-Made Cases - get exactly what you want</li>
               </ul>
             </p>
           </div>
@@ -165,8 +164,8 @@
         <div class="card bl-card">
           <div class="card-header text-center">Product Information</div>
           <div class="card-body">
-              <p>Eye-catching packaging with UPCs</p>
-              <p>Licensed and insured facility</p>
+            <p>Eye-catching packaging with UPCs</p>
+            <p>Licensed and insured facility</p>
             <ul>
               <li>Net wt 5.5 oz (156g)</li>
               <li>Jar wt 9.5oz (270g)</li>
