--- a/queensofgoodness/shop.html
+++ b/queensofgoodness/shop.html
@@ -16,16 +16,16 @@
     <meta property="og:locale" content="en_US">
     <meta property="og:title" content="Queens of Goodness - Shop Local">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://queensofgoodness.com/index.html">
+    <meta property="og:url" content="https://queensofgoodness.com/shop.html">
     <meta property="og:site_name" content="Queens of Goodness - Shop Local">
     <meta property="og:description" content="Premium creamed raw honey with fair trade spices and whole freeze dried fruits">
-    <meta property="og:image" content="static/img/logo.svg">
+    <meta property="og:image" content="https://queensofgoodness.com/static/img/Queens-Of-Goodness-Horizontal-Raw-Honey-yellow-BG.png">
 
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:title" content="Queens of Goodness - Shop Local">
     <meta property="twitter:description" content="Premium creamed raw honey with fair trade spices and whole freeze dried fruits">
-    <meta property="twitter:site" content="@queensofgoodness">
-    <meta property="twitter:image" content="static/img/logo.svg">
+    <meta property="twitter:site" content="@goodnessqueens">
+    <meta property="twitter:image" content="https://queensofgoodness.com/static/img/Queens-Of-Goodness-Horizontal-Raw-Honey-yellow-BG.png">
     <meta name="description" content="Queens of Goodness - Shop Local">
     <meta name="author" content="Susan Frost">
     <meta name="robots" content="index, follow">
@@ -46,7 +46,6 @@
     <link href="static/css/custom.css" rel="stylesheet" media="screen">
 
   </head>
-
 
   <nav class="navbar navbar-expand-lg border-bottom fixed-top">
     <div class="container-fluid">
@@ -121,7 +120,6 @@
 
   <body>
     <div class="container-xl" id="hero">
-
       <div class="row g-3">
         <div class="image-container">
           <img src="static/img/Display.jpg" class="img-fluid img-banner">
@@ -139,7 +137,7 @@
                 <tr>
                   <td>
                     <a href="https://meadowlarklander.org" target="_blank" rel="noopener noreferrer">
-                      <img src="static/img/MeadowlarkLogo-Final.png" class="img-fluid">
+                      <img src="static/img/MeadowlarkLogo-Final.png" class="img-fluid" width=80%>
                     </a>
                   </td>
                   <td>
@@ -149,27 +147,37 @@
                 <tr>
                   <td>
                     <a href="https://www.lincolnstreetbakery.com" target="_blank" rel="noopener noreferrer">
-                      <img src="static/img/LincolnstreetBakery-01.png" class="img-fluid">
+                      <img src="static/img/LincolnstreetBakery-01.png" class="img-fluid" width=80%>
                     </a>
                   </td>
                   <td>
                     223 Lincoln St, Lander, WY
                   </td>
                 </tr>
-                <td>
-                  <a href="https://fremontlocalmarket.org" target="_blank" rel="noopener noreferrer">
-                    <img src="static/img/FremontLocalMarketLogo_updated.jpg" class="img-fluid" width=75%>
-                  </a>
-                </td>
-                <td>
-                  524 E Main St, Riverton, WY
-                </td>
+                <tr>
+                  <td>
+                    <a href="https://www.facebook.com/countrycharmstore/" target="_blank" rel="noopener noreferrer">
+                      <h4>Country Charm</h4>
+                    </a>
+                  </td>
+                  <td>
+                    173 Main St, Lander, WY
+                  </td>
                 </tr>
+                <tr>
+                  <td>
+                    <a href="https://fremontlocalmarket.org" target="_blank" rel="noopener noreferrer">
+                      <img src="static/img/FremontLocalMarketLogo_updated.jpg" class="img-fluid" width=75%>
+                    </a>
+                  </td>
+                  <td>
+                    524 E Main St, Riverton, WY
+                  </td>
                 </tr>
                 <tr>
                   <td>
                     <a href="https://www.chalkncheesewy.com/" target="_blank" rel="noopener noreferrer">
-                      <img src="static/img/g30.avif" class="img-fluid" width=50%>
+                      <img src="static/img/g30.avif" class="img-fluid" width=40%>
                     </a>
                   </td>
                   <td>
@@ -188,8 +196,48 @@
                 </tr>
                 <tr>
                   <td>
+                    <a href="https://www.hbcafeandjuicery.com" target="_blank" rel="noopener noreferrer">
+                      <img src="static/img/HB.jpg" class="img-fluid" width=25%>
+                    </a>
+                  </td>
+                  <td>
+                    165 E Broadway Jackson Hole, WY
+                  </td>
+                </tr>
+                <tr>
+                  <td>
+                    <a href="https://www.operahousestore.com/" target="_blank" rel="noopener noreferrer">
+                      <img src="static/img/OperaHouse.webp" class="img-fluid" width=40%>
+                    </a>
+                  </td>
+                  <td>
+                    801 S Main St, Kemmerer, WY
+                  </td>
+                </tr>
+                <tr>
+                  <td>
+                    <a href="https://broadwaybakery.net" target="_blank" rel="noopener noreferrer">
+                      <h4>Broadway Bakery</h4>
+                    </a>
+                  </td>
+                  <td>
+                    509 Broadway St, Thermopolis, WY
+                  </td>
+                </tr>
+                <tr>
+                  <td>
+                    <a href="https://www.facebook.com/p/Natures-Corner-100063679985266/" target="_blank" rel="noopener noreferrer">
+                      <h4>Nature's Corner</h4>
+                    </a>
+                  </td>
+                  <td>
+                    530 Broadway St, Thermopolis, WY
+                  </td>
+                </tr>
+                <tr>
+                  <td>
                     <a href="https://thecupboard.net" target="_blank" rel="noopener noreferrer">
-                      <img src="static/img/new-cupboard-logo.png" class="img-fluid">
+                      <img src="static/img/new-cupboard-logo.png" class="img-fluid" width=70%>
                     </a>
                   </td>
                   <td>
@@ -259,6 +307,7 @@
             <div class="social-links">
               <a href="https://www.facebook.com/profile.php?id=61556597102293"><img src="https://queensofgoodness.com/static/img/Facebook-48x48.png" class="social-icon"></a>
               <a href="https://instagram.com/QueensofGoodness" width=48><img src="https://queensofgoodness.com/static/img/Instagram-48x48.png" class="social-icon"></a>
+              <a href="https://x.com/goodnessqueens" width=48><img src="https://queensofgoodness.com/static/img/X-48x48.png" class="social-icon"></a>
             </div>
           </div>
         </div>
@@ -288,6 +337,7 @@
             <div class="social-links">
               <a href="https://www.facebook.com/profile.php?id=61556597102293"><img src="https://queensofgoodness.com/static/img/Facebook-48x48.png" class="social-icon"></a>
               <a href="https://instagram.com/QueensofGoodness" width=48><img src="https://queensofgoodness.com/static/img/Instagram-48x48.png" class="social-icon"></a>
+              <a href="https://x.com/goodnessqueens" width=48><img src="https://queensofgoodness.com/static/img/X-48x48.png" class="social-icon"></a>
             </div>
           </div>
           <div class="col-md-6 text-center">
