--- a/queensofgoodness/events.html
+++ b/queensofgoodness/events.html
@@ -16,16 +16,16 @@
     <meta property="og:locale" content="en_US">
     <meta property="og:title" content="Queens of Goodness - Education & Events">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://queensofgoodness.com/index.html">
+    <meta property="og:url" content="https://queensofgoodness.com/events.html">
     <meta property="og:site_name" content="Queens of Goodness - Education & Events">
     <meta property="og:description" content="Premium creamed raw honey with fair trade spices and whole freeze dried fruits">
-    <meta property="og:image" content="static/img/logo.svg">
+    <meta property="og:image" content="https://queensofgoodness.com/static/img/Queens-Of-Goodness-Horizontal-Raw-Honey-yellow-BG.png">
 
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:title" content="Queens of Goodness - Education & Events">
     <meta property="twitter:description" content="Premium creamed raw honey with fair trade spices and whole freeze dried fruits">
-    <meta property="twitter:site" content="@queensofgoodness">
-    <meta property="twitter:image" content="static/img/logo.svg">
+    <meta property="twitter:site" content="@goodnessqueens">
+    <meta property="twitter:image" content="https://queensofgoodness.com/static/img/Queens-Of-Goodness-Horizontal-Raw-Honey-yellow-BG.png">
     <meta name="description" content="Queens of Goodness - Education & Events">
     <meta name="author" content="Susan Frost">
     <meta name="robots" content="index, follow">
@@ -133,13 +133,34 @@
       <div class="row row-cols-1 row-cols-md-2 g-3">
         <div class="col">
           <div class="card h-100">
+            <div class="card-header text-center">National Honey Bee Day - August 16th</div>
+            <div class="card-body">
+              <img class="img-fluid" src="static/img/HoneyBeeDay24.jpeg" alt="National Honey Bee Day posters and demonstrations">
+            </div>
+            <div class="card-footer text-center">
+              Join us at the Lander Valley Farmer's Market to learn more about bees and what you can do.
+              We'll have beekeeping equipment, activities for kids and an observation hive with live
+              bees safely behind glass for you to observe.
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card h-100">
+            <div class="card-header text-center">Beekeeping Class - May 17th</div>
+            <div class="card-body">
+              <img class="img-fluid" src="static/img/SuccessfulBeekeeping2025.png" alt="Success at Beekeeping 2025 class flyer">
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card h-100">
             <div class="card-header text-center">Garden Expo - April 26th</div>
             <div class="card-body">
               <img class="img-fluid" src="static/img/Garden%20Expo%20logo%20stacked.jpg" alt="Garden Expo">
               <p class="card-title"><br>
-                 We'll be presenting a workshop at the Expo starting at 9:30am - Beekeeping 201: Honey Bee Health.</p>
+                We'll be presenting a workshop at the Expo starting at 9:30am - Beekeeping 201: Honey Bee Health.</p>
               <p class="card-title">
-                 Join us and other local beekeepers at an educational booth with beekeeping demonstrations and much more.</p>
+                Join us and other local beekeepers at an educational booth with beekeeping demonstrations and much more.</p>
               <hr>
               <p class="card-title text-center">
                 Saturday, April 26th 9 a.m. to 3 p.m.<br>
@@ -155,31 +176,8 @@
         </div>
         <div class="col">
           <div class="card h-100">
-            <div class="card-header text-center">Beekeeping Class - May 17th</div>
-            <div class="card-body">
-              <img class="img-fluid" src="static/img/SuccessfulBeekeeping2025.png" alt="Success at Beekeeping 2025 class flyer">
-            </div>
-            <div class="card-footer text-center">
-              <a class="learn-more" href="https://www.cwc.edu/tickets/" target="_blank" rel="noopener noreferrer">
-                Register</a>
-            </div>
-          </div>
-        </div>
-        <div class="col">
-          <div class="card h-100">
             <div class="card-body">
               <img class="img-fluid" src="static/img/IntroMarch2025.jpeg" alt="Introduction to Bees and Beekeeping">
-            </div>
-          </div>
-        </div>
-        <div class="col">
-          <div class="card h-100">
-            <div class="card-header text-center">National Honey Bee Day</div>
-            <div class="card-body">
-              <img class="img-fluid" src="static/img/HoneyBeeDay24.jpeg" alt="National Honey Bee Day posters and demonstrations">
-            </div>
-            <div class="card-footer text-center">
-              2024 was a great success, next one in August
             </div>
           </div>
         </div>
@@ -209,6 +207,7 @@
             <div class="social-links">
               <a href="https://www.facebook.com/profile.php?id=61556597102293"><img src="https://queensofgoodness.com/static/img/Facebook-48x48.png" class="social-icon"></a>
               <a href="https://instagram.com/QueensofGoodness" width=48><img src="https://queensofgoodness.com/static/img/Instagram-48x48.png" class="social-icon"></a>
+              <a href="https://x.com/goodnessqueens" width=48><img src="https://queensofgoodness.com/static/img/X-48x48.png" class="social-icon"></a>
             </div>
           </div>
         </div>
@@ -238,6 +237,7 @@
             <div class="social-links">
               <a href="https://www.facebook.com/profile.php?id=61556597102293"><img src="https://queensofgoodness.com/static/img/Facebook-48x48.png" class="social-icon"></a>
               <a href="https://instagram.com/QueensofGoodness" width=48><img src="https://queensofgoodness.com/static/img/Instagram-48x48.png" class="social-icon"></a>
+              <a href="https://x.com/goodnessqueens" width=48><img src="https://queensofgoodness.com/static/img/X-48x48.png" class="social-icon"></a>
             </div>
           </div>
           <div class="col-md-6 text-center">
