Add X links, png for og:image

--- a/queensofgoodness/honey.html
+++ b/queensofgoodness/honey.html
@@ -16,16 +16,16 @@
     <meta property="og:locale" content="en_US">
     <meta property="og:title" content="Queens of Goodness - Know Your Honey">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://queensofgoodness.com/index.html">
+    <meta property="og:url" content="https://queensofgoodness.com/honey.html">
     <meta property="og:site_name" content="Queens of Goodness - Know Your Honey">
     <meta property="og:description" content="Learn about local raw honey, organic, imported and creamed honey">
-    <meta property="og:image" content="static/img/logo.svg">
+    <meta property="og:image" content="https://queensofgoodness.com/static/img/Queens-Of-Goodness-Horizontal-Raw-Honey-yellow-BG.png">
 
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:title" content="Queens of Goodness - Know Your Honey">
     <meta property="twitter:description" content="Learn about local raw honey, organic, imported and creamed honey">
-    <meta property="twitter:site" content="@queensofgoodness">
-    <meta property="twitter:image" content="static/img/logo.svg">
+    <meta property="twitter:site" content="@goodnessqueens">
+    <meta property="twitter:image" content="https://queensofgoodness.com/static/img/Queens-Of-Goodness-Horizontal-Raw-Honey-yellow-BG.png">
     <meta name="description" content="Learn about local raw honey, organic, imported and creamed honey">
     <meta name="author" content="Susan Frost">
     <meta name="robots" content="index, follow">
@@ -271,6 +271,7 @@
             <div class="social-links">
               <a href="https://www.facebook.com/profile.php?id=61556597102293"><img src="https://queensofgoodness.com/static/img/Facebook-48x48.png" class="social-icon"></a>
               <a href="https://instagram.com/QueensofGoodness" width=48><img src="https://queensofgoodness.com/static/img/Instagram-48x48.png" class="social-icon"></a>
+              <a href="https://x.com/goodnessqueens" width=48><img src="https://queensofgoodness.com/static/img/X-48x48.png" class="social-icon"></a>
             </div>
           </div>
         </div>
@@ -300,6 +301,7 @@
             <div class="social-links">
               <a href="https://www.facebook.com/profile.php?id=61556597102293"><img src="https://queensofgoodness.com/static/img/Facebook-48x48.png" class="social-icon"></a>
               <a href="https://instagram.com/QueensofGoodness" width=48><img src="https://queensofgoodness.com/static/img/Instagram-48x48.png" class="social-icon"></a>
+              <a href="https://x.com/goodnessqueens" width=48><img src="https://queensofgoodness.com/static/img/X-48x48.png" class="social-icon"></a>
             </div>
           </div>
           <div class="col-md-6 text-center">
