--- a/queensofgoodness/index.html
+++ b/queensofgoodness/index.html
@@ -18,15 +18,15 @@
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://queensofgoodness.com/index.html">
     <meta property="og:site_name" content="Queens of Goodness">
-    <meta property="og:description" content="Premium creamed raw honey with fair trade-spices and whole freeze dried fruits">
-    <meta property="og:image" content="static/img/logo.svg">
+    <meta property="og:description" content="Premium creamed raw honey with fair trade-spices and whole freeze-dried fruits">
+    <meta property="og:image" content="https://queensofgoodness.com/static/img/Queens-Of-Goodness-Horizontal-Raw-Honey-yellow-BG.png">
 
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:title" content="Queens of Goodness">
-    <meta property="twitter:description" content="Premium creamed raw honey with fair-trade spices and whole freeze dried fruits">
-    <meta property="twitter:site" content="@queensofgoodness">
-    <meta property="twitter:image" content="static/img/logo.svg">
-    <meta name="description" content="Premium creamed raw honey with fair-trade spices and whole freeze dried fruits">
+    <meta property="twitter:description" content="Premium creamed raw honey with fair-trade spices and whole freeze-dried fruits">
+    <meta property="twitter:site" content="@goodnessqueens">
+    <meta property="twitter:image" content="https://queensofgoodness.com/static/img/Queens-Of-Goodness-Horizontal-Raw-Honey-yellow-BG.png">
+    <meta name="description" content="Premium creamed raw honey with fair-trade spices and whole freeze-dried fruits">
     <meta name="author" content="Susan Frost">
     <meta name="robots" content="index, follow">
     <meta name="googlebot" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1">
@@ -136,7 +136,7 @@
             <div class="card-body">
               <p class="card-text">
                 Raw unfiltered honey is sourced directly from trusted local beekeepers
-                and enriched with fair-trade spices or nutrient-rich freeze-dried fruits.
+                and enriched with fair-trade spices and nutrient-rich freeze-dried fruits.
                 Each batch is hand-crafted using a
                 proprietary week-long crystallization and blending process that yields
                 a velvety-smooth, spreadable product with distinctive flavors and all
@@ -322,6 +322,7 @@
             <div class="social-links">
               <a href="https://www.facebook.com/profile.php?id=61556597102293"><img src="https://queensofgoodness.com/static/img/Facebook-48x48.png" class="social-icon"></a>
               <a href="https://instagram.com/QueensofGoodness" width=48><img src="https://queensofgoodness.com/static/img/Instagram-48x48.png" class="social-icon"></a>
+              <a href="https://x.com/goodnessqueens" width=48><img src="https://queensofgoodness.com/static/img/X-48x48.png" class="social-icon"></a>
             </div>
           </div>
         </div>
@@ -351,10 +352,11 @@
             <div class="social-links">
               <a href="https://www.facebook.com/profile.php?id=61556597102293"><img src="https://queensofgoodness.com/static/img/Facebook-48x48.png" class="social-icon"></a>
               <a href="https://instagram.com/QueensofGoodness" width=48><img src="https://queensofgoodness.com/static/img/Instagram-48x48.png" class="social-icon"></a>
+              <a href="https://x.com/goodnessqueens" width=48><img src="https://queensofgoodness.com/static/img/X-48x48.png" class="social-icon"></a>
             </div>
           </div>
           <div class="col-md-6 text-center">
-            <p><br><a class="footer-link" href="#">Contact Us</a></p>
+            <p><br><a class="footer-link" href="https://docs.google.com/forms/d/e/1FAIpQLScsOeiNsdaF_9xookzfcsCWY4L_YHAYovlJ9Lk-ufyrhJDXNA/viewform?usp=dialog">Contact Us</a></p>
             <p>2881 Sinks Canyon Rd<br>
               Lander, WY 82520</p>
           </div>
